package model;

import java.awt.Rectangle;

public class Mov {
	
	public int x,y;
	public int speed;
	public String direction;
	public Rectangle solidArea;
	public int solidAreaDefaultX,solidAreaDefaultY;
	public boolean collisionOn=false;
}
