@startuml Diagramme de classes
!define DARKRED
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml
class Boule{
    int x 
    int y 
    int diametre 
}

class CollisionChecker{
    int x 
    int y 
    int diametre 
}
class Gamelauncher{
    class ActionListener

    Method main()
    Method launchGame()
    Method showDialog()
    Method CloseDialog()
    
     
}
class Interface{
    int OriginalTitlesize
    int scale
    int titlesize 
    int boules 
    int random
    int maxScreenCol
    int maxScreenRow
    int screenWidth
    int screenHeight
    Font Alkhemikal
    Tile TileManger

    

}
class Mov{
    int x 
    int y
    int speed 
    int direction 
    Rectangle solidArea
    int solidAreaDefaultX
    int solidAreaDefaultY
    boolean collisionON
}
class PersoPrincipal{
    String currentDirection
    int tempscompteur
    Interface inter
    KeyHandler keyH
}
class Tile{
    BufferedImage image
    boolean collision 
}
class TileManger{
    Interface gp
    tile tile 
    int mapTileNum
}
class mage{
    int runSprites
    int currentFrame
    int animationDelay
    int currentDirection
    int SpeedMultiplier
    int random
    int directionChangeTimer
    int directionChangeInterval
    Interface inter
}
class Demon{
    int runSprites
    int currentFrame
    int animationDelay
    int currentDirection
    int SpeedMultiplier
    int random
    int directionChangeTimer
    int directionChangeInterval
    Interface inter
}
class lutin{
    int runSprites
    int currentFrame
    int animationDelay
    int currentDirection
    int SpeedMultiplier
    int random
    int directionChangeTimer
    int directionChangeInterval
    Interface inter
}
class Ogre{
    int runSprites
    int currentFrame
    int animationDelay
    int currentDirection
    int SpeedMultiplier
    int random
    int directionChangeTimer
    int directionChangeInterval
    Interface inter
}
Demon --> Mov 
lutin --> Mov 
mage --> Mov 
CollisionChecker -->Mov
PersoPrincipal --> Mov 
Ogre --> Mov 
Interface --> Gamelauncher
TileManger --> Tile
Mov -->Interface
Boule --> PersoPrincipal
Boule --> Interface
Tile --> Interface 


@enduml